<resources>
    <string name="app_name">Fuel Record</string>
    <string name="db_version">1</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="nav_menu_home">首页</string>
    <string name="nav_menu_timeline">时间轴</string>
    <string name="nav_menu_add">添加</string>
    <string name="nav_menu_mileagelog">里程日志</string>
    <string name="nav_menu_statistics">统计信息</string>
    <string name="nav_menu_chart">图表</string>
    <string name="nav_menu_cost_reminder">花费/提醒</string>
    <string name="nav_menu_costlog">费用记录</string>
    <string name="nav_menu_coststatistics">费用统计</string>
    <string name="nav_menu_costchart">费用图表</string>
    <string name="nav_menu_vehiles">车辆</string>
    <string name="nav_menu_setting">设置</string>
    <string name="home_main_tab_overview">概述</string>
    <string name="home_main_tab_calculator">计算器</string>
    <string name="home_main_neary">附近</string>
    <string name="home_main_neary_gas_staions">附近加油站</string>
    <string name="home_main_vehiles">车辆信息</string>
    <string name="home_main_gas">油耗</string>
    <string name="home_main_costs">费用</string>
</resources>
