<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorWhile"
        app:cardElevation="@dimen/card_view_elevation"
        android:layout_marginLeft="@dimen/card_view_margin"
        android:layout_marginRight="@dimen/card_view_margin"
        android:layout_marginTop="@dimen/card_view_margin"
        app:contentPadding="@dimen/card_view_padding">
        <Spinner
            android:id="@+id/overview_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/card_view_margin"
            android:layout_marginTop="@dimen/card_view_margin"
            android:paddingLeft="@dimen/card_view_margin"
            android:text="@string/home_main_neary"
            android:textFontWeight="@dimen/card_view_title_text_weight"
            android:textSize="@dimen/card_view_title_text_size" />
        <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorWhile"
        app:cardElevation="@dimen/card_view_elevation"
        app:contentPadding="@dimen/card_view_padding"
        android:layout_marginLeft="@dimen/card_view_margin"
        android:layout_marginRight="@dimen/card_view_margin"
        android:layout_marginTop="@dimen/card_view_margin">
          <LinearLayout
              android:layout_width="wrap_content"
              android:background="@android:color/transparent"
              android:layout_height="wrap_content"
              android:orientation="vertical">
              <RelativeLayout
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:drawableLeft="@drawable/ic_gas"
                      android:drawablePadding="@dimen/card_view_margin"
                      android:layout_alignParentLeft="true"
                      android:background="@android:color/transparent"
                      android:text="@string/home_main_neary_gas_staions"/>
                  <ImageButton
                      android:src="@drawable/ic_menu_vertical"
                      android:background="@android:color/transparent"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_alignParentRight="true"/>
              </RelativeLayout>
              <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                  <de.hdodenhof.circleimageview.CircleImageView
                      xmlns:app="http://schemas.android.com/apk/res-auto"
                      android:id="@+id/profile_image"
                      android:layout_width="@dimen/avatar_bounds"
                      android:layout_height="@dimen/avatar_bounds"
                      android:src="@drawable/ic_gas_white"
                      app:civ_border_width="@dimen/avatar_border"
                      app:civ_border_overlay="false"
                      app:civ_circle_background_color="@android:color/black"
                      app:civ_border_color="@android:color/black"/>
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_alignParentRight="true"
                      android:text="111111111111111111111111111111111111"/>
              </RelativeLayout>
          </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/card_view_margin"
            android:layout_marginTop="@dimen/card_view_margin"
            android:paddingLeft="@dimen/card_view_margin"
            android:text="@string/home_main_vehiles"
            android:textFontWeight="@dimen/card_view_title_text_weight"
            android:textSize="@dimen/card_view_title_text_size" />
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorWhile"
            app:cardElevation="@dimen/card_view_elevation"
            android:layout_marginLeft="@dimen/card_view_margin"
            android:layout_marginRight="@dimen/card_view_margin"
            android:layout_marginTop="@dimen/card_view_margin"
            app:contentPadding="@dimen/card_view_padding">
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/card_view_margin"
            android:layout_marginTop="@dimen/card_view_margin"
            android:paddingLeft="@dimen/card_view_margin"
            android:text="@string/home_main_gas"
            android:textFontWeight="@dimen/card_view_title_text_weight"
            android:textSize="@dimen/card_view_title_text_size" />
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorWhile"
            app:cardElevation="@dimen/card_view_elevation"
            android:layout_marginLeft="@dimen/card_view_margin"
            android:layout_marginRight="@dimen/card_view_margin"
            android:layout_marginTop="@dimen/card_view_margin"
            app:contentPadding="@dimen/card_view_padding">
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/card_view_margin"
            android:layout_marginTop="@dimen/card_view_margin"
            android:paddingLeft="@dimen/card_view_margin"
            android:text="@string/home_main_costs"
            android:textFontWeight="@dimen/card_view_title_text_weight"
            android:textSize="@dimen/card_view_title_text_size" />
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorWhile"
            app:cardElevation="@dimen/card_view_elevation"
            android:layout_marginLeft="@dimen/card_view_margin"
            android:layout_marginRight="@dimen/card_view_margin"
            android:layout_marginTop="@dimen/card_view_margin"
            app:contentPadding="@dimen/card_view_padding">
        </android.support.v7.widget.CardView>
    </LinearLayout>

</LinearLayout>